Trabalho/y.output
   0  $accept : program $end

   1  $$1 :

   2  $$2 :

   3  program : $$1 PROGRAM ID ';' $$2 declarationOpc compoundStmt '.'

   4  declarationOpc : varDeclarations procDeclarations

   5  varDeclarations : VAR declarationList
   6                  |

   7  declarationList : declaration ';' declarationList
   8                  | declaration ';'
   9                  | error

  10  declaration : idList ':' type

  11  idList : ID
  12         | ID ',' idList

  13  type : INTEGER
  14       | BOOLEAN
  15       | REAL

  16  procDeclarations : procDec procDeclarations
  17                   |

  18  procDec : procHeader declarationOpc compoundStmt ';'
  19          | funcHeader declarationOpc compoundStmt ';'

  20  procHeader : PROCEDURE ID argumentList ';'

  21  funcHeader : FUNCTION ID argumentList ':' type ';'

  22  argumentList : '(' arguments ')'
  23               |

  24  arguments : declaration ';' arguments
  25            | declaration

  26  compoundStmt : BEGIN statementList END

  27  statementList : statement ';' statementList
  28                | statement
  29                | error ';'

  30  statement : ID ASSIGN expression
  31            | IF expression THEN statement
  32            | IF expression THEN statement ELSE statement
  33            | WHILE expression DO statement
  34            | compoundStmt
  35            | READLN '(' ID ')'
  36            | WRITELN '(' printList ')'
  37            | ID '(' expressionList ')'
  38            |

  39  printList : LITERAL printList2
  40            | expression printList2

  41  printList2 : ',' printList
  42             |

  43  expression : expression '+' expression
  44             | expression '-' expression
  45             | expression OR expression
  46             | expression '*' expression
  47             | expression DIV expression
  48             | expression MOD expression
  49             | expression AND expression
  50             | expression LE expression
  51             | expression LEQ expression
  52             | expression EQ expression
  53             | expression GEQ expression
  54             | expression GR expression
  55             | expression NEQ expression
  56             | NOT expression
  57             | '(' expression ')'
  58             | ID
  59             | ID '(' expressionList ')'
  60             | NUM
  61             | TRUE
  62             | FALSE

  63  expressionList : expression
  64                 | expression ',' expressionList
  65                 |

state 0
	$accept : . program $end  (0)
	$$1 : .  (1)

	.  reduce 1

	program  goto 1
	$$1  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : $$1 . PROGRAM ID ';' $$2 declarationOpc compoundStmt '.'  (3)

	PROGRAM  shift 3
	.  error


state 3
	program : $$1 PROGRAM . ID ';' $$2 declarationOpc compoundStmt '.'  (3)

	ID  shift 4
	.  error


state 4
	program : $$1 PROGRAM ID . ';' $$2 declarationOpc compoundStmt '.'  (3)

	';'  shift 5
	.  error


state 5
	program : $$1 PROGRAM ID ';' . $$2 declarationOpc compoundStmt '.'  (3)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 6


state 6
	program : $$1 PROGRAM ID ';' $$2 . declarationOpc compoundStmt '.'  (3)
	varDeclarations : .  (6)

	VAR  shift 7
	FUNCTION  reduce 6
	PROCEDURE  reduce 6
	BEGIN  reduce 6

	declarationOpc  goto 8
	varDeclarations  goto 9


state 7
	varDeclarations : VAR . declarationList  (5)

	error  shift 10
	ID  shift 11
	.  error

	declarationList  goto 12
	declaration  goto 13
	idList  goto 14


state 8
	program : $$1 PROGRAM ID ';' $$2 declarationOpc . compoundStmt '.'  (3)

	BEGIN  shift 15
	.  error

	compoundStmt  goto 16


state 9
	declarationOpc : varDeclarations . procDeclarations  (4)
	procDeclarations : .  (17)

	FUNCTION  shift 17
	PROCEDURE  shift 18
	BEGIN  reduce 17

	procDeclarations  goto 19
	procDec  goto 20
	procHeader  goto 21
	funcHeader  goto 22


state 10
	declarationList : error .  (9)

	.  reduce 9


state 11
	idList : ID .  (11)
	idList : ID . ',' idList  (12)

	','  shift 23
	':'  reduce 11


state 12
	varDeclarations : VAR declarationList .  (5)

	.  reduce 5


state 13
	declarationList : declaration . ';' declarationList  (7)
	declarationList : declaration . ';'  (8)

	';'  shift 24
	.  error


state 14
	declaration : idList . ':' type  (10)

	':'  shift 25
	.  error


state 15
	compoundStmt : BEGIN . statementList END  (26)
	statement : .  (38)

	error  shift 26
	BEGIN  shift 15
	IF  shift 27
	WHILE  shift 28
	READLN  shift 29
	WRITELN  shift 30
	ID  shift 31
	END  reduce 38
	';'  reduce 38

	compoundStmt  goto 32
	statementList  goto 33
	statement  goto 34


state 16
	program : $$1 PROGRAM ID ';' $$2 declarationOpc compoundStmt . '.'  (3)

	'.'  shift 35
	.  error


state 17
	funcHeader : FUNCTION . ID argumentList ':' type ';'  (21)

	ID  shift 36
	.  error


state 18
	procHeader : PROCEDURE . ID argumentList ';'  (20)

	ID  shift 37
	.  error


state 19
	declarationOpc : varDeclarations procDeclarations .  (4)

	.  reduce 4


state 20
	procDeclarations : procDec . procDeclarations  (16)
	procDeclarations : .  (17)

	FUNCTION  shift 17
	PROCEDURE  shift 18
	BEGIN  reduce 17

	procDeclarations  goto 38
	procDec  goto 20
	procHeader  goto 21
	funcHeader  goto 22


state 21
	procDec : procHeader . declarationOpc compoundStmt ';'  (18)
	varDeclarations : .  (6)

	VAR  shift 7
	FUNCTION  reduce 6
	PROCEDURE  reduce 6
	BEGIN  reduce 6

	declarationOpc  goto 39
	varDeclarations  goto 9


state 22
	procDec : funcHeader . declarationOpc compoundStmt ';'  (19)
	varDeclarations : .  (6)

	VAR  shift 7
	FUNCTION  reduce 6
	PROCEDURE  reduce 6
	BEGIN  reduce 6

	declarationOpc  goto 40
	varDeclarations  goto 9


state 23
	idList : ID ',' . idList  (12)

	ID  shift 11
	.  error

	idList  goto 41


state 24
	declarationList : declaration ';' . declarationList  (7)
	declarationList : declaration ';' .  (8)

	error  shift 10
	ID  shift 11
	FUNCTION  reduce 8
	PROCEDURE  reduce 8
	BEGIN  reduce 8

	declarationList  goto 42
	declaration  goto 13
	idList  goto 14


state 25
	declaration : idList ':' . type  (10)

	INTEGER  shift 43
	BOOLEAN  shift 44
	REAL  shift 45
	.  error

	type  goto 46


state 26
	statementList : error . ';'  (29)

	';'  shift 47
	.  error


state 27
	statement : IF . expression THEN statement  (31)
	statement : IF . expression THEN statement ELSE statement  (32)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 54


state 28
	statement : WHILE . expression DO statement  (33)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 55


state 29
	statement : READLN . '(' ID ')'  (35)

	'('  shift 56
	.  error


state 30
	statement : WRITELN . '(' printList ')'  (36)

	'('  shift 57
	.  error


state 31
	statement : ID . ASSIGN expression  (30)
	statement : ID . '(' expressionList ')'  (37)

	ASSIGN  shift 58
	'('  shift 59
	.  error


state 32
	statement : compoundStmt .  (34)

	.  reduce 34


state 33
	compoundStmt : BEGIN statementList . END  (26)

	END  shift 60
	.  error


state 34
	statementList : statement . ';' statementList  (27)
	statementList : statement .  (28)

	';'  shift 61
	END  reduce 28


state 35
	program : $$1 PROGRAM ID ';' $$2 declarationOpc compoundStmt '.' .  (3)

	.  reduce 3


state 36
	funcHeader : FUNCTION ID . argumentList ':' type ';'  (21)
	argumentList : .  (23)

	'('  shift 62
	':'  reduce 23

	argumentList  goto 63


state 37
	procHeader : PROCEDURE ID . argumentList ';'  (20)
	argumentList : .  (23)

	'('  shift 62
	';'  reduce 23

	argumentList  goto 64


state 38
	procDeclarations : procDec procDeclarations .  (16)

	.  reduce 16


state 39
	procDec : procHeader declarationOpc . compoundStmt ';'  (18)

	BEGIN  shift 15
	.  error

	compoundStmt  goto 65


state 40
	procDec : funcHeader declarationOpc . compoundStmt ';'  (19)

	BEGIN  shift 15
	.  error

	compoundStmt  goto 66


state 41
	idList : ID ',' idList .  (12)

	.  reduce 12


state 42
	declarationList : declaration ';' declarationList .  (7)

	.  reduce 7


state 43
	type : INTEGER .  (13)

	.  reduce 13


state 44
	type : BOOLEAN .  (14)

	.  reduce 14


state 45
	type : REAL .  (15)

	.  reduce 15


state 46
	declaration : idList ':' type .  (10)

	.  reduce 10


state 47
	statementList : error ';' .  (29)

	.  reduce 29


state 48
	expression : NOT . expression  (56)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 67


state 49
	expression : TRUE .  (61)

	.  reduce 61


state 50
	expression : FALSE .  (62)

	.  reduce 62


state 51
	expression : ID .  (58)
	expression : ID . '(' expressionList ')'  (59)

	'('  shift 68
	END  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	DO  reduce 58
	DIV  reduce 58
	MOD  reduce 58
	AND  reduce 58
	OR  reduce 58
	LEQ  reduce 58
	LE  reduce 58
	GEQ  reduce 58
	EQ  reduce 58
	NEQ  reduce 58
	GR  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	';'  reduce 58
	','  reduce 58
	')'  reduce 58


state 52
	expression : NUM .  (60)

	.  reduce 60


state 53
	expression : '(' . expression ')'  (57)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 69


state 54
	statement : IF expression . THEN statement  (31)
	statement : IF expression . THEN statement ELSE statement  (32)
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	THEN  shift 70
	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	.  error


state 55
	statement : WHILE expression . DO statement  (33)
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	DO  shift 84
	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	.  error


state 56
	statement : READLN '(' . ID ')'  (35)

	ID  shift 85
	.  error


state 57
	statement : WRITELN '(' . printList ')'  (36)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	LITERAL  shift 86
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 87
	printList  goto 88


state 58
	statement : ID ASSIGN . expression  (30)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 89


state 59
	statement : ID '(' . expressionList ')'  (37)
	expressionList : .  (65)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	')'  reduce 65

	expression  goto 90
	expressionList  goto 91


state 60
	compoundStmt : BEGIN statementList END .  (26)

	.  reduce 26


state 61
	statementList : statement ';' . statementList  (27)
	statement : .  (38)

	error  shift 26
	BEGIN  shift 15
	IF  shift 27
	WHILE  shift 28
	READLN  shift 29
	WRITELN  shift 30
	ID  shift 31
	END  reduce 38
	';'  reduce 38

	compoundStmt  goto 32
	statementList  goto 92
	statement  goto 34


state 62
	argumentList : '(' . arguments ')'  (22)

	ID  shift 11
	.  error

	declaration  goto 93
	idList  goto 14
	arguments  goto 94


state 63
	funcHeader : FUNCTION ID argumentList . ':' type ';'  (21)

	':'  shift 95
	.  error


state 64
	procHeader : PROCEDURE ID argumentList . ';'  (20)

	';'  shift 96
	.  error


state 65
	procDec : procHeader declarationOpc compoundStmt . ';'  (18)

	';'  shift 97
	.  error


state 66
	procDec : funcHeader declarationOpc compoundStmt . ';'  (19)

	';'  shift 98
	.  error


state 67
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)
	expression : NOT expression .  (56)

	.  reduce 56


state 68
	expression : ID '(' . expressionList ')'  (59)
	expressionList : .  (65)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	')'  reduce 65

	expression  goto 90
	expressionList  goto 99


state 69
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)
	expression : '(' expression . ')'  (57)

	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	')'  shift 100
	.  error


state 70
	statement : IF expression THEN . statement  (31)
	statement : IF expression THEN . statement ELSE statement  (32)
	statement : .  (38)

	BEGIN  shift 15
	IF  shift 27
	WHILE  shift 28
	READLN  shift 29
	WRITELN  shift 30
	ID  shift 31
	END  reduce 38
	ELSE  reduce 38
	';'  reduce 38

	compoundStmt  goto 32
	statement  goto 101


state 71
	expression : expression DIV . expression  (47)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 102


state 72
	expression : expression MOD . expression  (48)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 103


state 73
	expression : expression AND . expression  (49)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 104


state 74
	expression : expression OR . expression  (45)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 105


state 75
	expression : expression LEQ . expression  (51)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 106


state 76
	expression : expression LE . expression  (50)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 107


state 77
	expression : expression GEQ . expression  (53)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 108


state 78
	expression : expression EQ . expression  (52)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 109


state 79
	expression : expression NEQ . expression  (55)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 110


state 80
	expression : expression GR . expression  (54)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 111


state 81
	expression : expression '+' . expression  (43)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 112


state 82
	expression : expression '-' . expression  (44)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 113


state 83
	expression : expression '*' . expression  (46)

	NOT  shift 48
	TRUE  shift 49
	FALSE  shift 50
	ID  shift 51
	NUM  shift 52
	'('  shift 53
	.  error

	expression  goto 114


state 84
	statement : WHILE expression DO . statement  (33)
	statement : .  (38)

	BEGIN  shift 15
	IF  shift 27
	WHILE  shift 28
	READLN  shift 29
	WRITELN  shift 30
	ID  shift 31
	END  reduce 38
	ELSE  reduce 38
	';'  reduce 38

	compoundStmt  goto 32
	statement  goto 115


state 85
	statement : READLN '(' ID . ')'  (35)

	')'  shift 116
	.  error


state 86
	printList : LITERAL . printList2  (39)
	printList2 : .  (42)

	','  shift 117
	')'  reduce 42

	printList2  goto 118


state 87
	printList : expression . printList2  (40)
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)
	printList2 : .  (42)

	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	','  shift 117
	')'  reduce 42

	printList2  goto 119


state 88
	statement : WRITELN '(' printList . ')'  (36)

	')'  shift 120
	.  error


state 89
	statement : ID ASSIGN expression .  (30)
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	END  reduce 30
	ELSE  reduce 30
	';'  reduce 30


state 90
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)
	expressionList : expression .  (63)
	expressionList : expression . ',' expressionList  (64)

	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	OR  shift 74
	LEQ  shift 75
	LE  shift 76
	GEQ  shift 77
	EQ  shift 78
	NEQ  shift 79
	GR  shift 80
	'+'  shift 81
	'-'  shift 82
	'*'  shift 83
	','  shift 121
	')'  reduce 63


state 91
	statement : ID '(' expressionList . ')'  (37)

	')'  shift 122
	.  error


state 92
	statementList : statement ';' statementList .  (27)

	.  reduce 27


state 93
	arguments : declaration . ';' arguments  (24)
	arguments : declaration .  (25)

	';'  shift 123
	')'  reduce 25


state 94
	argumentList : '(' arguments . ')'  (22)

	')'  shift 124
	.  error


state 95
	funcHeader : FUNCTION ID argumentList ':' . type ';'  (21)

	INTEGER  shift 43
	BOOLEAN  shift 44
	REAL  shift 45
	.  error

	type  goto 125


state 96
	procHeader : PROCEDURE ID argumentList ';' .  (20)

	.  reduce 20


state 97
	procDec : procHeader declarationOpc compoundStmt ';' .  (18)

	.  reduce 18


state 98
	procDec : funcHeader declarationOpc compoundStmt ';' .  (19)

	.  reduce 19


state 99
	expression : ID '(' expressionList . ')'  (59)

	')'  shift 126
	.  error


state 100
	expression : '(' expression ')' .  (57)

	.  reduce 57


101: shift/reduce conflict (shift 127, reduce 31) on ELSE
state 101
	statement : IF expression THEN statement .  (31)
	statement : IF expression THEN statement . ELSE statement  (32)

	ELSE  shift 127
	END  reduce 31
	';'  reduce 31


state 102
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression DIV expression .  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	.  reduce 47


state 103
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression MOD expression .  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	.  reduce 48


state 104
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression AND expression .  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	.  reduce 49


state 105
	expression : expression . '+' expression  (43)
	expression : expression . '-' expression  (44)
	expression : expression . OR expression  (45)
	expression : expression OR expression .  (45)
	expression : expression . '*' expression  (46)
	expression : expression . DIV expression  (47)
	expression : expression . MOD expression  (48)
	expression : expression . AND expression  (49)
	expression : expression . LE expression  (50)
	expression : expression . LEQ expression  (51)
	expression : expression . EQ expression  (52)
	expression : expression . GEQ expression  (53)
	expression : expression . GR expression  (54)
	expression : expression . NEQ expression  (55)

	DIV  shift 71
	MOD  shift 72
	AND  shift 73
	'*'  shift 83
	END  reduce 45
	THEN  reduce 45
	ELSE  reduce 45
	DO  reduce 45
	OR  reduce 45
	LEQ  reduce 45
	LE  reduce 45
	GEQ  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	GR  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	';'  reduce 45
	','  reduce 45
	')'  reduce 45

